fixed overflow and added shadows

--- a/front-end-development/markdown-previewer/src/Editor.css
+++ b/front-end-development/markdown-previewer/src/Editor.css
@@ -9,6 +9,7 @@
   border-bottom: none;
   height: 2rem;
   width: 70.312vh;
+  box-shadow: 1px 1px 10px 2px #3a5f5f;
 }
 
 .editor-icon-title-wrapper {
