--- a/front-end-development/markdown-previewer/src/Previewer.css
+++ b/front-end-development/markdown-previewer/src/Previewer.css
@@ -9,6 +9,7 @@
   border-bottom: none;
   height: 2rem;
   width: 100vh;
+  box-shadow: 1px 1px 10px 2px #3a5f5f;
 }
 
 .previewer-icon-title-wrapper {
@@ -39,4 +40,6 @@
   border: 1px solid black;
   padding: 0.5rem;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
